bootstrap/src/options/parse_opts.cc
/* Generated by re2c 4.6 */
#line 1 "../src/options/parse_opts.re"
#include <stddef.h>
#include <algorithm>
#include <string>
#include <vector>

#include "src/dfa/dfa.h"
#include "src/encoding/enc.h"
#include "src/msg/location.h"
#include "src/msg/msg.h"
#include "src/msg/warn.h"
#include "src/options/opt.h"
#include "src/parse/input.h"

namespace re2c {

static inline bool next(char*& arg, char**& argv) {
    arg = *++argv;
    return arg != nullptr;
}

LOCAL_NODISCARD(inline Ret set_source_file(conopt_t& global, const char* source)) {
    if (!global.source_file.empty()) {
        RET_FAIL(error("multiple source files: %s, %s", global.source_file.c_str(), source));
    }
    global.set_source_file(source);
    return Ret::OK;
}

#define NEXT_ARG(option, label) \
    do { if (!next(YYCURSOR, argv)) RET_FAIL(error_arg(option)); goto label; } while(0)

#define ERRARG(opt, exp, arg) \
    RET_FAIL(error("bad argument `%s` to option %s (expected <%s>)", arg, opt, exp))

LOCAL_NODISCARD(Ret parse_opts(Opt& opts, conopt_t& global, char** argv, Msg& msg, Lang* lang)) {
    char* YYCURSOR, *YYMARKER;
    Warn::option_t option;

#line 45 "../src/options/parse_opts.re"


opt:
    if (!next (YYCURSOR, argv)) goto end;

#line 48 "src/options/parse_opts.cc"
{
	char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[256] = {
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = *YYCURSOR;
	if (yych <= 0x00) goto yy1;
	if (yych == '-') goto yy3;
	goto yy2;
yy1:
	++YYCURSOR;
#line 50 "../src/options/parse_opts.re"
	{ RET_FAIL(error("bad option: %s", *argv)); }
#line 94 "src/options/parse_opts.cc"
yy2:
	yych = *++YYCURSOR;
	if (yybm[0+yych] & 128) goto yy2;
	goto yy4;
yy3:
	yych = *++YYCURSOR;
	if (yych <= '-') {
		if (yych <= 0x00) goto yy5;
		if (yych >= '-') goto yy6;
	} else {
		if (yych == 'W') goto yy7;
	}
#line 64 "../src/options/parse_opts.re"
	{ goto opt_short; }
#line 109 "src/options/parse_opts.cc"
yy4:
	++YYCURSOR;
#line 62 "../src/options/parse_opts.re"
	{ CHECK_RET(set_source_file(global, *argv));     goto opt; }
#line 114 "src/options/parse_opts.cc"
yy5:
	++YYCURSOR;
#line 61 "../src/options/parse_opts.re"
	{ CHECK_RET(set_source_file(global, "<stdin>")); goto opt; }
#line 119 "src/options/parse_opts.cc"
yy6:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy9;
#line 65 "../src/options/parse_opts.re"
	{ goto opt_long; }
#line 125 "src/options/parse_opts.cc"
yy7:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 'e') {
		if (yych <= 0x00) goto yy10;
		if (yych >= 'e') goto yy11;
	} else {
		if (yych == 'n') goto yy13;
	}
yy8:
#line 69 "../src/options/parse_opts.re"
	{ option = Warn::W;        goto opt_warn; }
#line 138 "src/options/parse_opts.cc"
yy9:
	++YYCURSOR;
#line 52 "../src/options/parse_opts.re"
	{
        // the remaining args are non-options, so they must be input files (re2c expects exactly
        // one input file)
        for (char *f; next(f, argv); ) {
            CHECK_RET(set_source_file(global, f));
        }
        goto end;
    }
#line 150 "src/options/parse_opts.cc"
yy10:
	++YYCURSOR;
#line 67 "../src/options/parse_opts.re"
	{ msg.warn.set_all();       goto opt; }
#line 155 "src/options/parse_opts.cc"
yy11:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy14;
yy12:
	YYCURSOR = YYMARKER;
	if (yyaccept == 0) goto yy8;
	else goto yy18;
yy13:
	yych = *++YYCURSOR;
	if (yych == 'o') goto yy15;
	goto yy12;
yy14:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy16;
	goto yy12;
yy15:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy17;
	goto yy12;
yy16:
	yych = *++YYCURSOR;
	if (yych == 'o') goto yy19;
	goto yy12;
yy17:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'e') goto yy20;
yy18:
#line 70 "../src/options/parse_opts.re"
	{ option = Warn::WNO;      goto opt_warn; }
#line 186 "src/options/parse_opts.cc"
yy19:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy21;
	goto yy12;
yy20:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy22;
	goto yy12;
yy21:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy23;
	if (yych == '-') goto yy24;
	goto yy12;
yy22:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy25;
	goto yy12;
yy23:
	++YYCURSOR;
#line 68 "../src/options/parse_opts.re"
	{ msg.warn.set_all_error(); goto opt; }
#line 208 "src/options/parse_opts.cc"
yy24:
	++YYCURSOR;
#line 71 "../src/options/parse_opts.re"
	{ option = Warn::WERROR;   goto opt_warn; }
#line 213 "src/options/parse_opts.cc"
yy25:
	yych = *++YYCURSOR;
	if (yych != 'o') goto yy12;
	yych = *++YYCURSOR;
	if (yych != 'r') goto yy12;
	yych = *++YYCURSOR;
	if (yych != '-') goto yy12;
	++YYCURSOR;
#line 72 "../src/options/parse_opts.re"
	{ option = Warn::WNOERROR; goto opt_warn; }
#line 224 "src/options/parse_opts.cc"
}
#line 73 "../src/options/parse_opts.re"


opt_warn: 
#line 230 "src/options/parse_opts.cc"
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case 'c': goto yy29;
		case 'd': goto yy30;
		case 'e': goto yy31;
		case 'm': goto yy32;
		case 'n': goto yy33;
		case 's': goto yy34;
		case 'u': goto yy35;
		default: goto yy27;
	}
yy27:
	++YYCURSOR;
yy28:
#line 76 "../src/options/parse_opts.re"
	{ RET_FAIL(error("bad warning: %s", *argv)); }
#line 249 "src/options/parse_opts.cc"
yy29:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'o') goto yy36;
	goto yy28;
yy30:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'e') goto yy38;
	goto yy28;
yy31:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'm') goto yy39;
	goto yy28;
yy32:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'a') goto yy40;
	goto yy28;
yy33:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'o') goto yy41;
	goto yy28;
yy34:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'e') goto yy42;
	if (yych == 'w') goto yy43;
	goto yy28;
yy35:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'n') goto yy44;
	if (yych == 's') goto yy45;
	goto yy28;
yy36:
	yych = *++YYCURSOR;
	if (yych == 'n') goto yy46;
yy37:
	YYCURSOR = YYMARKER;
	goto yy28;
yy38:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy47;
	goto yy37;
yy39:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy48;
	goto yy37;
yy40:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy49;
	goto yy37;
yy41:
	yych = *++YYCURSOR;
	if (yych == 'n') goto yy50;
	goto yy37;
yy42:
	yych = *++YYCURSOR;
	if (yych == 'n') goto yy51;
	goto yy37;
yy43:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy52;
	goto yy37;
yy44:
	yych = *++YYCURSOR;
	if (yych == 'd') goto yy53;
	if (yych == 'r') goto yy54;
	goto yy37;
yy45:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy55;
	goto yy37;
yy46:
	yych = *++YYCURSOR;
	if (yych == 'd') goto yy56;
	goto yy37;
yy47:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy57;
	goto yy37;
yy48:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy58;
	goto yy37;
yy49:
	yych = *++YYCURSOR;
	if (yych == 'c') goto yy59;
	goto yy37;
yy50:
	yych = *++YYCURSOR;
	if (yych == 'd') goto yy60;
	goto yy37;
yy51:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy61;
	goto yy37;
yy52:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy62;
	goto yy37;
yy53:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy63;
	goto yy37;
yy54:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy64;
	goto yy37;
yy55:
	yych = *++YYCURSOR;
	if (yych == 'l') goto yy65;
	goto yy37;
yy56:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy66;
	goto yy37;
yy57:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy67;
	goto yy37;
yy58:
	yych = *++YYCURSOR;
	if (yych == 'y') goto yy68;
	goto yy37;
yy59:
	yych = *++YYCURSOR;
	if (yych == 'h') goto yy69;
	goto yy37;
yy60:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy70;
	goto yy37;
yy61:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy71;
	goto yy37;
yy62:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy72;
	goto yy37;
yy63:
	yych = *++YYCURSOR;
	if (yych == 'f') goto yy73;
	goto yy37;
yy64:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy74;
	goto yy37;
yy65:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy75;
	goto yy37;
yy66:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy76;
	goto yy37;
yy67:
	yych = *++YYCURSOR;
	if (yych == 'c') goto yy77;
	goto yy37;
yy68:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy78;
	goto yy37;
yy69:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy79;
	goto yy37;
yy70:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy80;
	goto yy37;
yy71:
	yych = *++YYCURSOR;
	if (yych == 'n') goto yy81;
	goto yy37;
yy72:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy82;
	goto yy37;
yy73:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy83;
	goto yy37;
yy74:
	yych = *++YYCURSOR;
	if (yych == 'c') goto yy84;
	goto yy37;
yy75:
	yych = *++YYCURSOR;
	if (yych == 's') goto yy85;
	goto yy37;
yy76:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy86;
	goto yy37;
yy77:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy87;
	goto yy37;
yy78:
	yych = *++YYCURSOR;
	if (yych == 'c') goto yy88;
	goto yy37;
yy79:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy89;
	goto yy37;
yy80:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy90;
	goto yy37;
yy81:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy91;
	goto yy37;
yy82:
	yych = *++YYCURSOR;
	if (yych == 'd') goto yy92;
	goto yy37;
yy83:
	yych = *++YYCURSOR;
	if (yych == 'n') goto yy93;
	goto yy37;
yy84:
	yych = *++YYCURSOR;
	if (yych == 'h') goto yy94;
	goto yy37;
yy85:
	yych = *++YYCURSOR;
	if (yych == 's') goto yy95;
	goto yy37;
yy86:
	yych = *++YYCURSOR;
	if (yych == 'o') goto yy96;
	goto yy37;
yy87:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy97;
	goto yy37;
yy88:
	yych = *++YYCURSOR;
	if (yych == 'h') goto yy98;
	goto yy37;
yy89:
	yych = *++YYCURSOR;
	if (yych == 'm') goto yy99;
	goto yy37;
yy90:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy100;
	goto yy37;
yy91:
	yych = *++YYCURSOR;
	if (yych == 'l') goto yy101;
	goto yy37;
yy92:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy102;
	goto yy37;
yy93:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy103;
	goto yy37;
yy94:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy104;
	goto yy37;
yy95:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy105;
	goto yy37;
yy96:
	yych = *++YYCURSOR;
	if (yych == 'n') goto yy106;
	goto yy37;
yy97:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy107;
	goto yy37;
yy98:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy108;
	goto yy37;
yy99:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy109;
	goto yy37;
yy100:
	yych = *++YYCURSOR;
	if (yych == 'm') goto yy110;
	goto yy37;
yy101:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy111;
	goto yy37;
yy102:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy112;
	goto yy37;
yy103:
	yych = *++YYCURSOR;
	if (yych == 'd') goto yy113;
	goto yy37;
yy104:
	yych = *++YYCURSOR;
	if (yych == 'b') goto yy114;
	goto yy37;
yy105:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy115;
	goto yy37;
yy106:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy116;
	goto yy37;
yy107:
	yych = *++YYCURSOR;
	if (yych == 'd') goto yy117;
	goto yy37;
yy108:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy118;
	goto yy37;
yy109:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy119;
	goto yy37;
yy110:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy120;
	goto yy37;
yy111:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy121;
	goto yy37;
yy112:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy122;
	goto yy37;
yy113:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy123;
	goto yy37;
yy114:
	yych = *++YYCURSOR;
	if (yych == 'l') goto yy124;
	goto yy37;
yy115:
	yych = *++YYCURSOR;
	if (yych == 's') goto yy125;
	goto yy37;
yy116:
	yych = *++YYCURSOR;
	if (yych == 'o') goto yy126;
	goto yy37;
yy117:
	yych = *++YYCURSOR;
